# neuwerk-rs

./: .gitignore  .gitleaksignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  DPI-INVESTIGATION.md  Makefile  README.md  SECURITY.md  build.rs  test.logn
.cargo/: audit.toml
.github/workflows/: ci-full-suite.yml  ci.yml  dependency-security.yml  e2e-sso-dex.yml  fuzz-nightly.yml  fuzz-smoke.yml  image-release.yml  image-validation.yml  pages.yml  security.yml  terraform-provider-release.yml
ROADMAP/: API-AUTH.md  AUDIT-MODE.md  AWS-INTEGRATION.md  AWS-PERF.md  AZURE-E2E.md  AZURE-INTEGRATION.md  CLOUD-INTEGRATION-OVERLAY.md  DATAPLANE-REVIEW.md  DPI-DNSFWD-IMPLEMENTATION.md  DPI-DNSFWD.md  HTTP-PERF.md  HTTP-TLS.md  KUBERNETES.md  LIFECYCLETEST.md  OBSERVABILITY.md  OIDC.md  PACKER-IMG-BUILD.md  PROD-CHECKLIST.md  PROD_READINESS.md  ROADMAP.md  SCALING.md  SERVICE-ACCOUNT-AUTHZ.md  SERVICE-ACCOUNT-TOKENS.md  TERRAFORM-PROVIDER.md  TEST-AND-REFACTOR.md  TLS-DATAPLANE.md  UI.md  WIRETAP.md  bootstrap-ha.md  cloud-test-framework.md  single-node-ha-migration-path.md
benches/: dataplane.rs  tls.rs
cloud-tests/: README.md
cloud-tests/aws/: Makefile  README.md
cloud-tests/azure/: Makefile  README.md
cloud-tests/common/: generate-scaling-recommendations.sh  http-perf-collect.sh  http-perf-matrix.sh  http-perf-run.sh  http-perf-setup.sh  http-perf-upstream-configure.sh  lib.sh  run-policy-smoke.sh  run-throughput-matrix.sh
cloud-tests/gcp/: Makefile  README.md
cloud-tests/runner/: Cargo.toml
cloud-tests/runner/src/: main.rs
demo/vagrant/: README.md  Vagrantfile  launch-demo.sh  provision-demo.sh
docs/: observability.md
docs/grafana/: firewall-operations-dashboard.json  neuwerk-operations-dashboard.json
docs/operations/: alerts.md  appliance-image-usage.md  backup-restore.md  image-build.md  local-vm-demo.md  logging.md  release-readiness.md  runtime-knobs.md  terraform-provider-registry-publication.md  terraform-provider-release.md  upgrade-rollback-dr.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: overlay_decap.rs  packet_parse.rs  tls_reassembly.rs
hack/: deploy-homelab.sh
packaging/: target.schema.json
packaging/runtime/: appliance.env  config.yaml  firewall-bootstrap.sh  firewall-launch.sh  firewall.service.in  neuwerk-bootstrap.sh  neuwerk-launch.sh  neuwerk.service.in
packer/: build.pkr.hcl  locals.pkr.hcl  plugins.pkr.hcl  sources.pkr.hcl  variables.pkr.hcl
proto/: cluster.proto
scripts/: bench-dataplane.sh  build-dpdk.sh  fuzz-nightly.sh  fuzz-smoke.sh  ha_local.sh  profile-dataplane-hotloop.sh  setup-dex.sh
src/: lib.rs  logging.rs  main.rs  main_tests.rs  metrics.rs
terraform-provider-neuwerk/: README.md  main.go
tests/: appliance_release_assets_contract.rs  cloud_integration.rs  cluster_join.rs  deploy_homelab_script_contract.rs  e2e_policy.yaml  http_api.rs  integration_dpdk_l2.rs  integration_nat.rs  oss_launch_surface.rs  packet_unit.rs  runtime_signal_cases.rs  terraform_provider_e2e.rs  terraform_provider_release_assets_contract.rs  terraform_provider_release_source.rs  terraform_provider_release_sync.rs  tls_policy_unit.rs  tls_unit.rs
ui/: App.tsx  README.md  buildPipeline.test.ts  index.css  index.html  index.tsx  metadata.json  navigation.test.ts  navigation.ts  package-lock.json  package.json  tailwind.config.js  types.ts  vite.config.ts
www/: astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
(+1280 files in other folders)
