[package]
name = "cloud-policy-smoke"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
rcgen = "0.12"

[dev-dependencies]
regex = "1"
